WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38860
Fix chromium build after
r59085
https://bugs.webkit.org/show_bug.cgi?id=38860
Summary
Fix chromium build after r59085
John Gregg
Reported
2010-05-10 12:11:41 PDT
Fix chromium build after
r59085
Attachments
Patch
(1.03 KB, patch)
2010-05-10 12:22 PDT
,
John Gregg
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Gregg
Comment 1
2010-05-10 12:22:37 PDT
Created
attachment 55590
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-05-10 12:26:59 PDT
Comment on
attachment 55590
[details]
Patch ok.
John Gregg
Comment 3
2010-05-10 12:36:52 PDT
Committed
r59089
: <
http://trac.webkit.org/changeset/59089
>
WebKit Review Bot
Comment 4
2010-05-10 12:48:59 PDT
http://trac.webkit.org/changeset/59089
might have broken Qt Linux ARMv5 Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug