third_party/WebKit/WebCore/html/canvas/WebGLIntegralTypedArrayBase.h
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "WebGLTypedArrayBase.h"
 #include <limits>
+#include <wtf/MathExtras.h>
 
 // Base class for all WebGL<T>Array types holding integral
 // (non-floating-point) values.
